dongle-smartcontract/test_results_v3.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
error[E0432]: unresolved import `crate::types::DataKey`
 --> src\utils.rs:2:5
  |
2 | use crate::types::DataKey;
  |     ^^^^^^^^^^^^^^^^^^^^^ no `DataKey` in `types`

warning: unused import: `crate::constants::MAX_CID_LEN`
 --> src\verification_registry.rs:3:5
  |
3 | use crate::constants::MAX_CID_LEN;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `publish_verification_approved_event`, `publish_verification_rejected_event`, and `publish_verification_requested_event`
 --> src\verification_registry.rs:6:5
  |
6 |     publish_verification_approved_event, publish_verification_rejected_event,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 |     publish_verification_requested_event,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::storage_keys::StorageKey`
  --> src\verification_registry.rs:10:5
   |
10 | use crate::storage_keys::StorageKey;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::constants::MAX_PROJECTS_PER_USER`
 --> src\test.rs:3:5
  |
3 | use crate::constants::MAX_PROJECTS_PER_USER;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::errors::ContractError as Error`
 --> src\test.rs:4:5
  |
4 | use crate::errors::ContractError as Error;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `FeeConfig` and `VerificationStatus`
 --> src\test.rs:5:20
  |
5 | use crate::types::{FeeConfig, VerificationStatus};
  |                    ^^^^^^^^^  ^^^^^^^^^^^^^^^^^^

warning: unused import: `Vec`
 --> src\test.rs:9:58
  |
9 | use soroban_sdk::{Address, Env, String as SorobanString, Vec};
  |                                                          ^^^

warning: variable does not need to be mutable
   --> src\review_registry.rs:126:13
    |
126 |         let mut user_reviews: soroban_sdk::Vec<u64> = env
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `env`
  --> src\verification_registry.rs:17:9
   |
17 |         env: &Env,
   |         ^^^ help: if this is intentional, prefix it with an underscore: `_env`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `project_id`
  --> src\verification_registry.rs:18:9
   |
18 |         project_id: u64,
   |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_project_id`

warning: unused variable: `requester`
  --> src\verification_registry.rs:19:9
   |
19 |         requester: Address,
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_requester`

warning: unused variable: `evidence_cid`
  --> src\verification_registry.rs:20:9
   |
20 |         evidence_cid: String,
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_evidence_cid`

For more information about this error, try `rustc --explain E0432`.
warning: `dongle-contract` (lib) generated 8 warnings
error: could not compile `dongle-contract` (lib) due to 1 previous error; 8 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `dongle-contract` (lib test) generated 12 warnings (8 duplicates)
error: could not compile `dongle-contract` (lib test) due to 1 previous error; 12 warnings emitted
